--- a/server/public/index.html
+++ b/server/public/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-        <script src="./scripts/cilent.js" charset="UTF-8" async></script>
+        <script src="./scripts/client.js" charset="UTF-8" async></script>
         <title>Weekend jQuery Server Calculator</title>
     </head>
     <body>
