--- a/server/public/index.html
+++ b/server/public/index.html
@@ -5,33 +5,27 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-        <script src="./scripts/client.js" charset="UTF-8" async></script>
+        <script src="./scripts/cilent.js" async></script>
         <title>Weekend jQuery Server Calculator</title>
     </head>
     <body>
         <header>
             <h1>Weekend jQuery Server Calculator</h1>
-            <form action="">
-                <!-- Create a user interface where the user can input two values (2 input elements) -->
-                <input
-                    id="firstNumber"
-                    type="number"
-                    placeholder="First Number"
-                />
-                <!-- and the select type of mathematical operation. -->
-                <button id="add">+</button>
-                <button id="subtract">-</button>
-                <button id="multiply">*</button>
-                <button id="divide">/</button>
-                <input
-                    id="secondNumber"
-                    type="number"
-                    placeholder="Second Number"
-                />
-                <!-- When the submit (`=` button) is clicked, capture this input, bundle it up in an object, and send this object to the server via a POST. -->
-                <button id="equal">=</button>
-                <button id="clear">C</button>
-            </form>
+            <!-- Create a user interface where the user can input two values (2 input elements) -->
+            <input id="firstNumber" type="number" placeholder="First Number" />
+            <!-- and the select type of mathematical operation. -->
+            <button id="add">+</button>
+            <button id="subtract">-</button>
+            <button id="multiply">*</button>
+            <button id="divide">/</button>
+            <input
+                id="secondNumber"
+                type="number"
+                placeholder="Second Number"
+            />
+            <!-- When the submit (`=` button) is clicked, capture this input, bundle it up in an object, and send this object to the server via a POST. -->
+            <button id="equal">=</button>
+            <button id="clear">C</button>
         </header>
         <main>
             <h1 id="answer"></h1>
