--- a/server/public/index.html
+++ b/server/public/index.html
@@ -12,17 +12,13 @@
         <header>
             <h1>Weekend jQuery Server Calculator</h1>
             <!-- Create a user interface where the user can input two values (2 input elements) -->
-            <input id="firstNumber" type="number" placeholder="First Number" />
+            <input id="num1" type="number" placeholder="First Number" />
             <!-- and the select type of mathematical operation. -->
             <button id="add">+</button>
             <button id="subtract">-</button>
             <button id="multiply">*</button>
             <button id="divide">/</button>
-            <input
-                id="secondNumber"
-                type="number"
-                placeholder="Second Number"
-            />
+            <input id="num2" type="number" placeholder="Second Number" />
             <!-- When the submit (`=` button) is clicked, capture this input, bundle it up in an object, and send this object to the server via a POST. -->
             <button id="equal">=</button>
             <button id="clear">C</button>
