--- a/server/public/index.html
+++ b/server/public/index.html
@@ -5,27 +5,27 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-        <script src="./scripts/cilent.js" async></script>
-        <title>Weekend jQuery Server Calculator</title>
+        <script src="./scripts/client.js" async></script>
+        <title>Server Side Calculator</title>
     </head>
     <body>
         <header>
-            <h1>Weekend jQuery Server Calculator</h1>
+            <h1>Server Side Calculator</h1>
             <!-- Create a user interface where the user can input two values (2 input elements) -->
             <input id="num1" type="number" placeholder="First Number" />
             <!-- and the select type of mathematical operation. -->
-            <button id="add">+</button>
-            <button id="subtract">-</button>
-            <button id="multiply">*</button>
-            <button id="divide">/</button>
+            <button class="operator">+</button>
+            <button class="operator">-</button>
+            <button class="operator">*</button>
+            <button class="operator">/</button>
             <input id="num2" type="number" placeholder="Second Number" />
             <!-- When the submit (`=` button) is clicked, capture this input, bundle it up in an object, and send this object to the server via a POST. -->
-            <button id="equal">=</button>
+            <button id="submit">=</button>
             <button id="clear">C</button>
         </header>
         <main>
             <h1 id="answer"></h1>
-            <ul id="calculations"></ul>
+            <ul></ul>
         </main>
     </body>
 </html>
